# pbip_model_lenz

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  dev.ps1  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/launch/: linkedin-announcement.md
examples/tiny_pbip/: sample.pbip
examples/tiny_pbip/sample.SemanticModel/definition/: database.tmdl  expressions.tmdl  model.tmdl  relationships.tmdl
examples/tiny_pbip/sample.SemanticModel/definition/tables/: Customer.tmdl  Date.tmdl  Measure.tmdl  Product.tmdl  Sales_fct.tmdl
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: DetailPanel.tsx  Header.tsx  Legend.tsx  PinnedBar.tsx  Sidebar.tsx  Toaster.tsx
frontend/src/graph/: ForceGraph.tsx  busLayout.ts  connectorGlyphs.tsx  edgeStyles.ts  nodeStyles.ts
frontend/src/routes/: Diff.tsx
frontend/src/store/: index.ts
src/model_lenz/: __init__.py  cli.py  git_meta.py  server.py
src/model_lenz/analyzers/: classifier.py  diff.py  measure_graph.py  relationships.py  transitive.py
src/model_lenz/api/: cache.py  routes.py
src/model_lenz/models/: __init__.py  diff.py  graph.py  lineage.py  semantic.py
src/model_lenz/parsers/: dax.py  m_query.py  pbip.py  tmdl.py
tests/e2e/: test_sample_pbip.py
tests/unit/: test_api_routes.py  test_classifier.py  test_dax_extractor.py  test_diff_analyzer.py  test_git_meta.py  test_m_lineage.py  test_measure_graph_lineage.py  test_relationship_walker.py  test_tmdl_parser.py  test_transitive.py
