[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model-lenz"
version = "0.1.0"
description = "Open-source PBIP analyzer: visualize how DAX measures relate to fact/dim tables and source-system lineage."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Jihwan Kim" }]
keywords = ["powerbi", "pbip", "tmdl", "dax", "fabric", "lineage"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "networkx>=3.2",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
model-lenz = "model_lenz.cli:app"

[project.urls]
Homepage = "https://github.com/JonathanJihwanKim/pbip_model_lenz"
Repository = "https://github.com/JonathanJihwanKim/pbip_model_lenz"
Issues = "https://github.com/JonathanJihwanKim/pbip_model_lenz/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/model_lenz"]

[tool.hatch.build.targets.wheel.force-include]
"src/model_lenz/frontend_dist" = "model_lenz/frontend_dist"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "model_lenz.models.*"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
